// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimStatus Component should match snapshot for APPROVED status 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    style="width: 1.125rem; height: 1.125rem;"
    viewBox="0 0 18 18"
  >
    <path
      d="M12 4C7.58222 4 4 7.58133 4 12C4 16.4187 7.58222 20 12 20C16.4178 20 20 16.4187 20 12C20 7.58133 16.4178 4 12 4ZM12 18.9333C8.17689 18.9333 5.06667 15.8231 5.06667 12C5.06667 8.17689 8.17689 5.06667 12 5.06667C15.8231 5.06667 18.9333 8.17689 18.9333 12C18.9333 15.8231 15.8231 18.9333 12 18.9333Z"
      fill="#00847F"
    />
    <path
      d="M16.44 9.42044L15.6853 8.66667L10.648 13.7031L8.55467 11.6107L7.8 12.3653L10.648 15.2116L16.44 9.42044Z"
      fill="#00847F"
    />
  </svg>
</div>
`;

exports[`ClaimStatus Component should match snapshot for PROCESSING status 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    style="width: 1.125rem; height: 1.125rem;"
    viewBox="0 0 18 18"
  >
    <path
      d="M12 4C7.58222 4 4 7.58133 4 12C4 16.4187 7.58222 20 12 20C16.4178 20 20 16.4187 20 12C20 7.58133 16.4178 4 12 4ZM12 18.9333C8.17689 18.9333 5.06667 15.8231 5.06667 12C5.06667 8.17689 8.17689 5.06667 12 5.06667C15.8231 5.06667 18.9333 8.17689 18.9333 12C18.9333 15.8231 15.8231 18.9333 12 18.9333ZM12.5333 6.66667H11.4667V12.5333H15.5556V11.4667H12.5333V6.66667Z"
      fill="#333333"
    />
  </svg>
</div>
`;

exports[`ClaimStatus Component should match snapshot for REJECTED status 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    style="width: 1.125rem; height: 1.125rem;"
    viewBox="0 0 18 18"
  >
    <path
      d="M15.1787 8.06756L12 11.2462L8.82133 8.06756L8.06756 8.82133L11.2462 12L8.06756 15.1787L8.82222 15.9324L12 12.7538L15.1787 15.9324L15.9333 15.1787L12.7538 12L15.9324 8.82133L15.1787 8.06756ZM12 4C7.58133 4 4 7.58222 4 12C4 16.4178 7.58133 20 12 20C16.4187 20 20 16.4178 20 12C20 7.58222 16.4187 4 12 4ZM12 18.9333C8.17689 18.9333 5.06667 15.8231 5.06667 12C5.06667 8.17689 8.17689 5.06667 12 5.06667C15.8231 5.06667 18.9333 8.17689 18.9333 12C18.9333 15.8231 15.8231 18.9333 12 18.9333Z"
      fill="#DB0011"
    />
  </svg>
</div>
`;

exports[`ClaimStatus Component should match snapshot for REQUEST FOR INFORMATION status 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    style="width: 1.125rem; height: 1.125rem;"
    viewBox="0 0 18 18"
  >
    <path
      d="M12 4C7.58222 4 4 7.58133 4 12C4 16.4187 7.58222 20 12 20C16.4178 20 20 16.4187 20 12C20 7.58133 16.4178 4 12 4ZM12 18.9333C8.17689 18.9333 5.06667 15.8231 5.06667 12C5.06667 8.17689 8.17689 5.06667 12 5.06667C15.8231 5.06667 18.9333 8.17689 18.9333 12C18.9333 15.8231 15.8231 18.9333 12 18.9333ZM12.5333 6.66667H11.4667V12.5333H15.5556V11.4667H12.5333V6.66667Z"
      fill="#333333"
    />
  </svg>
</div>
`;
